# fastapi-ddd-boilerplate

./: .env.example  .flake8  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/bootstrap/: di.py
app/infrastructure/cache/: base.py  config.py  init.py
app/infrastructure/database/: config.py  custom_types.py  models.py  utils.py
app/infrastructure/email/: config.py  smtp_client.py
app/infrastructure/jwt/: access_token.py  config.py  factory.py  jwt_processor.py
app/infrastructure/logger/: factory.py  logger.py
app/infrastructure/message_broker/: config.py  converters.py  message.py  rabbit_message_broker.py
app/infrastructure/repositories/: base.py
app/presentation/api/: lifespan.py  main.py  middleware.py  router.py
app/presentation/api/healthcheck/: router.py  schemas.py
app/settings/: config.py
app/tools/: run_in_processpool.py  run_in_threadpool.py
docker_compose/: app.yaml
migrations/: env.py
tests/: conftest.py
tests/infrastructure/email/: test_email.py
